l1ttl3_pwNY_v0.1/redsocks/rules_pwny.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:REDSOCKS - [0:0]
-A PREROUTING ! -s 10.0.10.122/32 -i wlan0 -p tcp -j REDSOCKS
-A REDSOCKS -d 10.0.0.0/8 -j RETURN
-A REDSOCKS -d 169.254.0.0/16 -j RETURN
-A REDSOCKS -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8091
-A REDSOCKS -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8090
-A REDSOCKS -p tcp -m tcp --dport 5228 -j REDIRECT --to-ports 8092
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8091 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8092 -j ACCEPT
COMMIT
